--- a/Api/package.json
+++ b/Api/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.1.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
