--- a/Api/package.json
+++ b/Api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
   },
